# deepslate

./: Cargo.toml  README.MD
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
deepslate-converter/: Cargo.toml
deepslate-converter/src/: chunk.rs  main.rs
src/: lib.rs  main.rs  reader.rs  static_enums.rs  tests.rs  writer.rs
src/chunk/: block.rs  mod.rs  section.rs
