[package]
name = "deepslate"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitcode = "0.6.0"
byteorder = "1.5.0"
clap = { version = "4.4.11", features = ["derive"], optional = true }
fastanvil = { version = "0.31.0", optional = true }
fastnbt = {version = "2.4.4", optional = true }
lz4 = "1.24.0"
rayon = "1.9.0"
zstd = "0.13.2"

[features]
binary = ["fastanvil", "clap", "fastnbt"]
default = ["binary"]

[[bin]]
path = "src/main.rs"
name = "deepslate-converter"
required-features = ["binary"]
