[package]
name = "deepslate"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bitcode = "0.6"
byteorder = "1"
clap = { version = "4", features = ["derive"], optional = true }
fastanvil = { version = "0.31", optional = true }
fastnbt = { version = "2.5", optional = true }
lz4 = "1.28"
rayon = { version = "1", optional = true }
zstd = "0.13"

[features]
binary = ["fastanvil", "clap", "fastnbt", "rayon"]
default = []

[[bin]]
path = "src/main.rs"
name = "deepslate-converter"
required-features = ["binary"]
