[package]
name = "deepslate"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = "0.6"
byteorder = "1"
lru = "0.12.4"
lz4 = "1.28"
zstd = "0.13"
anyhow.workspace = true
fastanvil = {workspace = true, optional = true}

[features]
fastanvil = ["dep:fastanvil"]

[workspace]
members = ["deepslate-converter"]

[workspace.package]
authors = ["0skar16"]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
fastanvil = "0.31"
anyhow = "1"
